Fixed alignment issues for title on large screens and meta information on bottom of page.

--- a/index.css
+++ b/index.css
@@ -465,7 +465,7 @@ body {
     padding-bottom: 4rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
     max-width: 50ch;
 }
 
@@ -548,13 +548,13 @@ body {
             '. image tabs .'
             '. image content .';
     }
-    
+
     .grid-container--destination > img {
         max-width: 90%;
     }
 
     .destination-meta {
-        --gap: 6rem;
+        --gap: min(6vw, 6rem);
         justify-content: start;
     }
 
